--- a/web.html
+++ b/web.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title> Branching Practice Site </title>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1> Branching </h1>
